@@ -1,3 +1,9 @@
+2009-01-05  Andrew Pinski  <andrew_pinski@playstation.sony.com>
+
+	PR c/34911
+	* gcc.dg/vector-3.c: New testcase.
+	* g++.dg/ext/vector15.C: New test.
+
 2009-01-05  Harsha Jagasia  <harsha.jagasia@amd.com>
 
 	PR tree-optimization/38510
